--- a/.github/workflows/release-latest.yml
+++ b/.github/workflows/release-latest.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -20,4 +24,5 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: igrek8/bullmq-prometheus:latest
+          platforms: linux/amd64,linux/arm64
+          tags: renatomjr/bullmq-prometheus:latest
